fix: right-align project info section

--- a/src/styles/quotePdf.css
+++ b/src/styles/quotePdf.css
@@ -254,25 +254,25 @@ body,
 }
 
 .quote-section--project {
-  text-align: left;
-  margin-left: 0;
-  margin-right: auto;
-  margin-inline-start: auto;
-  margin-inline-end: 0;
+  text-align: right;
+  margin-left: auto;
+  margin-right: 0;
+  margin-inline-start: 0;
+  margin-inline-end: auto;
   max-width: 50%;
   width: fit-content;
-  align-self: flex-start;
+  align-self: flex-end;
 }
 
 .quote-section--project .quote-section__title {
-  text-align: left;
+  text-align: right;
 }
 
 .quote-section--project .info-plain,
 .quote-section--project .info-plain__item {
-  text-align: left;
-  align-items: flex-start;
-  justify-content: flex-start;
+  text-align: right;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .quote-section--customer .info-plain,
